<resources>
    <string name="app_name">QuizApp</string>
    <string name="sit305_quiz_app">SIT305 Quiz App</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="start">START</string>
    <string name="welcome_your_name">Welcome your name!</string>
    <string name="_1_5">1/5</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>
    <string name="your_score">YOUR SCORE:</string>
    <string name="congratulations_your_name">Congratulations your name!</string>
    <string name="_5_5">5/5</string>
    <string name="take_new_quiz">Take new quiz</string>
    <string name="finish">Finish</string>
</resources>