<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_your_name"
            android:gravity="center"
            android:id="@+id/congratulationsTextView"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_5"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:id="@+id/scoreTextView"
            android:textSize="16sp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/take_new_quiz"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:id="@+id/takeNewQuizButton"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:id="@+id/finishButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>